--- a/styleguide.html
+++ b/styleguide.html
@@ -12,7 +12,10 @@
 <div class="container">
     <h1 class="sg-title">Digital styleguide</h1>
     <h2 class="sg-subtitle">Kleuren</h2>
+    <p>#5BD2B2</p>
+    <p>#ffffff</p>
     <h2 class="sg-subtitle">Typografie</h2>
+    <p>'Segoe UI', Tahoma, Verdana, sans-serif</p>
     <h2 class="sg-subtitle">Knopppen</h2>
     <h2 class="sg-subtitle">Formulier</h2>
     <h2 class="sg-subtitle">Componenten</h2>
