--- a/styleguide.html
+++ b/styleguide.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Styleguide</title>
+    <link rel="stylesheet" href="../gdmgent-1819-ux-CaitlinDhont1999-master/mainstyle.css">
     <link rel="stylesheet" href="assets/css/main.css">
     <link rel="stylesheet" href="assets/css/styleguide.css">
 </head>
@@ -12,10 +13,10 @@
 <div class="container">
     <h1 class="sg-title">Digital styleguide</h1>
     <h2 class="sg-subtitle">Kleuren</h2>
-    <p>#5BD2B2</p>
-    <p>#ffffff</p>
+    <p class="blue">#5BD2B2</p>
+    <p class="white">#ffffff</p>
     <h2 class="sg-subtitle">Typografie</h2>
-    <p>'Segoe UI', Tahoma, Verdana, sans-serif</p>
+    <p class="text">'Segoe UI', Tahoma, Verdana, sans-serif</p>
     <h2 class="sg-subtitle">Knopppen</h2>
     <h2 class="sg-subtitle">Formulier</h2>
     <h2 class="sg-subtitle">Componenten</h2>
